--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,14 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    implementation 'com.google.firebase:firebase-core:16.0.8'
+    implementation 'com.google.firebase:firebase-auth:16.2.0'
+    implementation 'com.google.firebase:firebase-firestore:18.1.0'
+    implementation 'com.google.firebase:firebase-storage:16.0.1'
+
+    implementation 'org.jetbrains.anko:anko-common:0.10.1'
+    implementation 'org.jetbrains.anko:anko-design:0.10.1'
+
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
