--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
             android:name=".ActivityProfile"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
+            android:configChanges="orientation|screenSize"
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".LeagueTableResults"
