--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:21.0.0'
     implementation 'com.google.firebase:firebase-storage:19.0.0'
     implementation 'com.google.firebase:firebase-analytics:17.1.0'
+    implementation 'com.google.firebase:firebase-functions:19.0.1'
 
     implementation 'org.jetbrains.anko:anko-common:0.10.1'
     implementation 'org.jetbrains.anko:anko-design:0.10.1'
