--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,11 +23,16 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
-            android:name=".ActivityProveLift"
+            android:name=".ActivityCreatorMonitorLeague"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden"
             />
+        <activity
+            android:name=".ActivityProveLift"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".ActivitySettings"
             android:screenOrientation="portrait"
@@ -40,9 +45,9 @@
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".ActivityProfile"
+            android:configChanges="orientation|screenSize"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
-            android:configChanges="orientation|screenSize"
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".LeagueTableResults"
@@ -76,13 +81,11 @@
             </intent-filter>
         </activity>
 
-
         <service android:name=".models.MyFirebaseMessagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
     </application>
 
 </manifest>
